# serde-ordered

./: .gitignore  Cargo.toml  LICENSE  README.md
serde-ordered/: Cargo.toml  README.md
serde-ordered-derive/: Cargo.toml
serde-ordered-derive/src/: lib.rs
serde-ordered/src/: lib.rs
serde-ordered/tests/: deserialize.rs
src/: lib.rs
tests/: deserialize.rs
