[package]
name = "serde-ordered"
version = "0.1.0"
edition = "2024"
authors = ["Nick Botelho nickpbotelho@gmail.com"]
description = "A procedural macro for deserializing ordered arrays into keyed structs using Serde."
license = "MIT OR Apache-2.0"
repository = "https://github.com/NickBotelho/serde-ordered"
keywords = ["serde", "deserialization", "macro", "proc-macro"]
categories = ["deserialization", "parsing"]
readme = "README.md"

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
serde = "1.0.219"
serde-value = "0.7.0"

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rmp-serde = "1.3.0"

[lib]
proc-macro = true
