[package]
name = "serde-ordered"
version = "0.3.0"
edition = "2024"
authors = ["Nick Botelho nickpbotelho@gmail.com"]
description = "A procedural macro for deserializing ordered arrays into keyed structs using Serde."
license = "MIT OR Apache-2.0"
repository = "https://github.com/NickBotelho/serde-ordered"
keywords = ["serde", "deserialization", "macro", "proc-macro"]
categories = ["data-structures", "parsing"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-value = "0.7"
serde-ordered-derive = { version = "0.3", path = "../serde-ordered-derive" }

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rmp-serde = "1.3.0"

